fix: change table header color in dark mode

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -186,7 +186,7 @@
   line-height: 1.7142857;
 }
 .prose thead {
-  color: #111827;
+  color: inherit;
   font-weight: 600;
   border-bottom-width: 1px;
   border-bottom-color: #d1d5db;
